<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>temporary_dmotor_ros</name>
  <version>0.0.0</version>
  <description>Motor System in Rust</description>
  <maintainer email="kiruruman@gmail.com">Daniel Ezomo</maintainer>
  <license>Apache License 2.0</license>

  <depend>std_msgs</depend>
  <depend>drobo_interfaces</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
